re(4): misc chip revision support changes  * remove impossible-to-match chip revision cases  * bring support for modern chips in line with FreeBSD and OpenBSD   * adds support for RTL8168GU

Addresses PR kern/56312.